# gnn-v-spectral

./: .gitignore  29_03_2026_Proposal.md  README.md  pyproject.toml  run_all.py
data/: __init__.py  precompute_spectra.py
data/generators/: build_dataset.py  calibrate_lfr.py  io.py  lfr.py  perturbations.py  sbm.py  validate_dataset.py
methods/: base.py  example.py  metrics.py  registry.py
methods/gnns/: gat.py  gcn.py  sgc.py
methods/spectral/: classifiers.py  embeddings.py  spectral_method.py
pipeline/: __init__.py  build_metadata_tables.py  generate_feature_informativeness.py  make_transductive_splits.py  plot_results.py  run_feature_informativeness.py  run_structural_noise.py  summarize_results.py
scripts/: precompute_sbm_clean.sh
tests/: test_generators.py  test_perturbations.py
